--- a/infrastructure/logging/opensearch-dashboards.yml
+++ b/infrastructure/logging/opensearch-dashboards.yml
@@ -19,6 +19,8 @@ spec:
           env:
             - name: OPENSEARCH_HOSTS
               value: "http://opensearch:9200"
+            - name: DISABLE_SECURITY_DASHBOARDS_PLUGIN
+              value: "true"
           ports:
             - containerPort: 5601
 ---
