--- a/infrastructure/logging/opensearch.yml
+++ b/infrastructure/logging/opensearch.yml
@@ -1,38 +1,42 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: opensearch
-  namespace: logging
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: opensearch
-  template:
-    metadata:
-      labels:
-        app: opensearch
-    spec:
-      containers:
-        - name: opensearch
-          image: opensearchproject/opensearch:2.11.1
-          env:
-            - name: discovery.type
-              value: single-node
-            - name: plugins.security.disabled
-              value: "true"
-            - name: DISABLE_SECURITY_PLUGIN
-              value: "true"
-          ports:
-            - containerPort: 9200
----
 apiVersion: v1
-kind: Service
-metadata:
-  name: opensearch
-  namespace: logging
-spec:
-  selector:
-    app: opensearch
-  ports:
-    - port: 9200
+kind: List
+items:
+  - apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: opensearch
+      namespace: logging
+    spec:
+      replicas: 1
+      selector:
+        matchLabels:
+          app: opensearch
+      template:
+        metadata:
+          labels:
+            app: opensearch
+        spec:
+          containers:
+            - name: opensearch
+              image: opensearchproject/opensearch:2.11.1
+              env:
+                - name: discovery.type
+                  value: "single-node"
+                - name: plugins.security.ssl.http.enabled
+                  value: "false"
+                - name: plugins.security.ssl.transport.enabled
+                  value: "false"
+                - name: DISABLE_SECURITY_PLUGIN
+                  value: "true"
+              ports:
+                - containerPort: 9200
+  - apiVersion: v1
+    kind: Service
+    metadata:
+      name: opensearch
+      namespace: logging
+    spec:
+      selector:
+        app: opensearch
+      ports:
+        - port: 9200
